code rewritten fixed height not responsive

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,12 +17,14 @@
     flex-direction: column;
     flex-wrap: wrap;
     background: radial-gradient(rgb(139, 195, 245), #1294b8);
+    height: 100vh;
+    width: 100vw;
 }
 .spacer
 {
     display: flex;
-    flex-grow: 1;
     flex-wrap: wrap;
+    width: 100%;
 }
 .pageTop
 {
@@ -32,6 +34,7 @@
     flex-direction:row;
     color: white;
     align-items: center;
+    padding-bottom: 2em;
 }
 .marqueNom
 {
@@ -46,7 +49,6 @@
 .marqueNom > h1
 {
     font-weight: 900;
-
 }
 .socials
 {
@@ -58,8 +60,8 @@
 }
 .socials > i
 {
-    padding-left: 1vh;
-    padding-right: 1vh;
+    padding-left: 1em;
+    padding-right: 1em;
 }
 .socials > i:hover
 {
@@ -89,7 +91,6 @@ ul
     display: inline-block;
     padding: 0 1% 0 1%;
     font-weight: 500;
-
 }
 
 .pageTop > nav> ul > li:hover
@@ -107,9 +108,8 @@ ul
     flex-wrap: wrap;
     flex-direction: column;
     padding-right: 3vh;
-    height: 50vh;
-    width: 51vh;
     justify-content: center;
+    width: 25%;
 }
 .subscribeText > h1
 {
@@ -132,7 +132,7 @@ ul
     border: none;
     background: transparent;
     outline: none; 
-    padding: 1vh 0vh 1vh 3vh;
+    padding: 1em 0em 1em 3em;
 }
 .btn
 {
@@ -152,7 +152,7 @@ ul
 }
 .divBtnSubscribe
 {
-    padding: 1vh;
+    padding: 1em;
 }
 
 .subscribeTextPlusImg
@@ -163,22 +163,37 @@ ul
     justify-content: center;
     align-items: center;
     gap: 3%;
+
 }
 .subscribeTextPlusImg > .subscribeText > p
 {
-    padding-top: 2vh;
-    padding-bottom: 2vh;
+    padding-top: 2em;
+    padding-bottom: 2em;
 }
-.subscribeTextPlusImg > img
-{
-    width: 70vh;
 
+.imgCat
+{
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
+}
+.subscribeTextPlusImg > .imgCat >img
+{
+    width: 100%;
+}
+.unnamed
+{
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
 }
 .panneau2
 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    width: 100vw;
+    height: 100vh;
 
 }
 
@@ -189,7 +204,7 @@ ul
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 70vh;
+    width: 35%;
 }
 
 .panneau2align
@@ -197,11 +212,11 @@ ul
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-bottom: 4vh;
+    padding-bottom: 4em;
 }
 .panneau2header > h2
 {
-padding: 2vh 0 2vh 0;
+padding: 2em 0 2em 0;
 }
 .panneau2header > p
 {
@@ -216,9 +231,9 @@ padding: 2vh 0 2vh 0;
     display: grid;
     grid-template-columns: repeat(3, 50vh);
     justify-items: center;
-    column-gap: 3vh;
+    column-gap: 3em;
     justify-content: center;
-    padding-bottom: 5vh;
+    padding-bottom: 5em;
 
 }
 .flexcard
@@ -226,7 +241,7 @@ padding: 2vh 0 2vh 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    width: 50vh;
+    width: 100%;
     height: 45vh;
     border-radius: 30px;
     justify-content: center;
@@ -248,34 +263,38 @@ padding: 2vh 0 2vh 0;
 
 .flexcard > h2
 {
-    padding: 5vh 0 2vh 0;
+    padding: 5em 0 2em 0;
 
 }
 .flexcard > p
 {
     text-align: center;
-    padding: 0 5vh 0 5vh;
+    padding: 0 5em 0 5em;
 }
 .panneau3
 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    width: 100vw;
+    height: 100vh;
 }
 .panneau3align
 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    width: 100%;
+    height: 20vh;
 }
 
 .panneau3align > h1
 {
     width: 55%;
     text-align: center;
-    padding-bottom: 2vh;
+    padding-bottom: 1em;
 }
 
 .panneau3align > p
@@ -283,9 +302,16 @@ padding: 2vh 0 2vh 0;
     width: 70%;
     text-align: center;
     color: grey;
-    padding: 0 0 5vh 0;
+    padding: 0 0 5em 0;
 }
-
+.teamGridFlex
+{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 100%;
+    height: 80vh;
+}
 .teamGrid
 {
     display: grid;
@@ -295,11 +321,11 @@ padding: 2vh 0 2vh 0;
     justify-items: center;
     align-content: center;
     align-items: center;
-    column-gap: 5vh;
+    column-gap: 5em;
 }
 .teamGrid > div
 {
-    width: 25vh;
+    width: 25vw;
     height: 25vh;
     display: flex;
     flex-wrap: wrap;
@@ -315,7 +341,7 @@ padding: 2vh 0 2vh 0;
 }
 .teamGrid > div > img
 {
-    width: 20vh;
+    width: 10vw;
     height: 20vh;
     border-radius: 50%;
     position: relative;
@@ -355,20 +381,28 @@ padding: 2vh 0 2vh 0;
 }
 .imgAnna:hover .annaSocials, .imgWilliam:hover .williamSocials, .imgMaria:hover .mariaSocials, .imgLuke:hover .lukeSocials
 {
-    transform: translateX(23vh);
+    transform: translateX(20vw);
     position: absolute;
     transition: 1.5s;
+}
+.panneauP
+{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 .parallax
 {
 
-    height: 50vh;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content:center;
     align-items: center;
     position: relative;
+    height: 30vh;
 
 }
 
@@ -400,12 +434,12 @@ padding: 2vh 0 2vh 0;
 .parallaxTextButton > p
 {
     text-align: center;
-    padding: 1.5vh 0 3vh 0;
+    padding: 1.5em 0 3em 0;
     max-width: 90%;
 }
 .parallaxTextButton > button
 {
-    padding:1vh 4vh;
+    padding:1em 4em;
     border-radius: 5px;
     border: none;
     border: solid white 1px;
@@ -426,11 +460,13 @@ padding: 2vh 0 2vh 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    height: 100vh;
+    width: 100%;
 }
 
 .blogDesc
 {
-    padding: 5vh 0 5vh 0;
+    padding: 5em 0 5em 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -440,29 +476,29 @@ padding: 2vh 0 2vh 0;
 
 .blogDesc >p
 {
-    padding-top: 2vh;
+    padding-top: 2em;
     max-width: 40%;
     text-align: center;
     color: grey;
 }
 .blogGrid
 {
-    padding: 2vh 0 2vh 0;
+    padding: 2em 0 2em 0;
     display: grid;
     grid-template-columns: repeat(3, 40vh);
     justify-content: center;
     justify-items: center;
     align-content: center;
     align-items: center;
-    column-gap: 15vh;
-    row-gap: 1vh;
+    column-gap: 3em;
+    row-gap: 1em;
 }
 .blogGrid >div
 {
     display: flex;
     flex-direction: column;
     height: 40vh;
-    width: 50vh;
+    width: 100%;
 }
 .blogGrid >div>img
 {
@@ -641,7 +677,7 @@ padding: 2vh 0 2vh 0;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-top: 5vh;
+    padding-top: 3em;
 }
 
 .headerPricing
@@ -649,10 +685,11 @@ padding: 2vh 0 2vh 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0 5vh 0 5vh;
+    padding: 0 1em 1em 1em;
     gap: 5vh;
     align-items: center;
     justify-content: center;
+    
 }
 .headerPricingText
 {
@@ -783,11 +820,14 @@ padding: 2vh 0 2vh 0;
 {
     padding-top: 3vh;
     padding-bottom: 3vh;
+    display: flex;
+    flex-wrap: wrap;
+
 }
 
 .pushButton
 {
-    padding-top: 5vh;
+    padding-top: 3vh;
     display: flex;
     flex-wrap:wrap
 }
@@ -795,4 +835,9 @@ padding: 2vh 0 2vh 0;
 .cardPrice > .pushButton > button
 {
     width: 35vh;
+    height: 5vh;
+    color: white;
+    background: rgb(139, 195, 245);
+    border: none;
+
 }
